--- a/index.css
+++ b/index.css
@@ -23,11 +23,11 @@ input {
 .forecast {
 	display: flex;
 	flex-direction: column;
-	row-gap: 30px;
+	row-gap: 15px;
 	width: 100%;
-	max-width: max-content;
+	max-width: 300px;
 	height: max-content;
-	padding: 24px;
+	padding: 15px;
 	border-radius: 6px;
 	background-color: #eadfd5;
 	box-shadow: 0 0.5em 1em -0.125em rgb(10 10 10 / 10%), 0 0 0 1px rgb(10 10 10 / 2%);
@@ -42,7 +42,7 @@ input {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	gap: 20px;
+	gap: 10px;
 }
 
 .forecast__input {
@@ -105,7 +105,8 @@ input {
 .forecast__card--inner {
 	background: rgba(234, 223, 213, 0.8);
 	border-radius: 6px;
-	width: 180px;
+	max-width: 180px;
+	width: 100%;
 	padding: 0 10px;
 	font-weight: 400;
 }
